[package]
name = "sup3"
version = "0.8.13"
edition = "2021"
authors = ["Lindsay Roberts <os@lindsayr.com>"]
license = "MIT"
description = "A standalone S3 uploader"
repository = "https://github.com/lsr0/sup3"
homepage = "https://github.com/lsr0/sup3"
readme = "README.md"
keywords = ["s3", "cli", "aws"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["progress"]
progress = ["dep:indicatif", "dep:console"]

[dependencies]
aws-config = "0.54"
aws-sdk-s3 = "0.24"
aws-types = "0.54"
aws-smithy-types = "0.54"
aws-smithy-http = "0.54"
tokio = { "version" = "1", features = ["full"] }
clap = { "version" = "3.1", features = ["std", "color", "suggestions", "derive", "cargo", "unicode"] }
url = "2"
thiserror = "1"
futures = "0.3"
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
http = "0.2"
async-recursion = "1"
tokio-util = "0"
async-stream = "0.3.3"
shell-escape = "0.1"
hyper = { version = "0.14.23", features = ["stream"] }

[profile.release]
opt-level = "s"

[profile.release-small]
inherits = "release"
strip = true
lto = true
