[package]
name = "sup3"
version = "0.8.17"
edition = "2021"
authors = ["Lindsay Roberts <os@lindsayr.com>"]
license = "MIT"
description = "A standalone S3 uploader"
repository = "https://github.com/lsr0/sup3"
homepage = "https://github.com/lsr0/sup3"
readme = "README.md"
keywords = ["s3", "cli", "aws"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["progress"]
progress = ["dep:indicatif", "dep:console"]
gen-completion = ["clap_complete"]

[dependencies]
aws-config = "0.56"
aws-sdk-s3 = "0.34"
aws-types = "0.56"
aws-smithy-types = "0.56"
aws-smithy-http = "0.56"
tokio = { "version" = "1", features = ["full"] }
clap = { "version" = "4.4", features = ["std", "color", "suggestions", "derive", "cargo", "unicode"] }
clap_complete = { version = "4.4", optional = true }
url = "2"
thiserror = "1"
futures = "0.3"
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
http = "0.2"
async-recursion = "1"
tokio-util = "0"
async-stream = "0.3.3"
shell-escape = "0.1"
hyper = { version = "0.14.23", features = ["stream"] }
wax = "0.6.0"

[profile.release]
opt-level = "s"

[profile.release-small]
inherits = "release"
strip = true
lto = true
